--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Projeto da Pós Graduação do Júlio. Primeiro projeto com JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*.test.js"
   },
   "keywords": [
     "estudo"
   ],
   "author": "Lobo, Flávia P P",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/prompt-sync": "^4.2.3",
+    "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0"
+  }
 }
