--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto da Pós Graduação do Júlio. Primeiro projeto com JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.test.js"
+    "test": "mocha --timeout 60000 test/**/*.test.js"
   },
   "keywords": [
     "estudo"
@@ -16,6 +16,7 @@
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
-    "mocha": "^10.4.0"
+    "mocha": "^10.4.0",
+    "selenium-webdriver": "^4.19.0"
   }
 }
